# iFresh

./: .travis.yml  Page1.qml  Page1Form.ui.qml  README.md  Swap.pro  aqicn_token  dataprovider.cpp  dataprovider.h  iFresh.pro  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
.circleci/: config.yml
android/: AndroidManifest.xml
conf/: aqicn_token
hdr/: dataprovider.h  ifreshnetworkmanager.h  inetworkprovider.h
qml/: Home.qml  HomeForm.ui.qml  Page1.qml  Page1Form.ui.qml  main.qml  qml.qrc
scripts/: build.sh  dependencies.sh  docker_exec.sh  extract-qt-installer  get_code_cov.sh  qt-5.7  webserver.sh
src/: dataprovider.cpp  ifreshnetworkmanager.cpp  main.cpp
tests/: CMakeLists.txt  DataProvider_Test.cpp  Main_TestAll.cpp  dataprovider_test.cpp  main.cpp  tests.pro
